Added frequency table.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "rust-crdt"
+name = "rust-stats"
 version = "0.1.0"
 authors = ["Andrew Gallant <jamslam@gmail.com>"]
 
 [lib]
-name = "crdt"
+name = "stats"
 path = "src/lib.rs"
 crate_type = ["dylib", "rlib"]
