doc: fix broken documentation link on crates.io
http://burntsushi.net/rustdoc/stats/ is forwarded to https://docs.rs/stats/0.0.1/stats/
which is a complete different crate.

Fixes #6

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "streaming-stats"
 version = "0.2.2"  #:version
 authors = ["Andrew Gallant <jamslam@gmail.com>"]
 description = "Experimental crate for computing basic statistics on streams."
-documentation = "http://burntsushi.net/rustdoc/stats/"
+documentation = "https://docs.rs/streaming-stats"
 homepage = "https://github.com/BurntSushi/rust-stats"
 repository = "https://github.com/BurntSushi/rust-stats"
 readme = "README.md"
