--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,10 @@ name = "stats"
 
 [dependencies]
 num-traits = "0.2"
+serde = { version = "1.0", optional = true, features = ["derive"] }
+
+[package.metadata.docs.rs]
+features = ["serde"]
+
+[package.metadata.playground]
+features = ["serde"]
